# my_parser_kma_makhynia

./: Cargo.toml  Makefile  README.md  Readme.md
src/: cli.rs  lib.rs  main.rs  output.txt  svg.pest
tests/: svg_content_test.rs  svg_test.rs
