[package]
name = "svg_file_parser"
version = "0.1.0"
edition = "2021"
description = "A Rust-based SVG parser designed to interpret scalable vector graphics (SVG) files."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
peg = "0.8.2"
pest = "2.7.5"
pest_derive = "2.7.5"
